chore: configure Kafka UI
